# kmc_project

./: CMakeLists.txt  load_modules.sh
configs/: acceptors.txt  config.txt  electrodes.txt  voltages.txt
data/: batch_0.npz  batch_1.npz  batch_10.npz  batch_11.npz  batch_12.npz  batch_13.npz  batch_14.npz  batch_15.npz  batch_1e6.npz  batch_1e7.npz  batch_2.npz  batch_222.npz  batch_223.npz  batch_224.npz  batch_225.npz  batch_3.npz  batch_300.npz  batch_301.npz  batch_302.npz  batch_303.npz  batch_304.npz  batch_305.npz  batch_4.npz  batch_400.npz  batch_401.npz  batch_402.npz  batch_403.npz  batch_404.npz  batch_5.npz  batch_501.npz  batch_502.npz  batch_503.npz  batch_504.npz  batch_505.npz  batch_6.npz  batch_7.npz  batch_8.npz  batch_9.npz  batch_testing.npz  device_1.npz  (+2 more)
include/: Configuration.h  FEMmethods.h  KMCSimulator.h  State.h  utils.h
scripts/: visualize.ipynb  visualize_hops.py
scripts/python_scripts/: visualize.ipynb  visualize_hops.py
scripts/slurm/: helix_batch.sh  helix_single.sh
src/: Configuration.cpp  Configuration.h  FEMmethods.cpp  KMCParameters.cpp  KMCParameters.h  KMCSimulator.cpp  KMCSimulator.h  Random.cpp  Random.h  State.cpp  State.h  main.cpp  stuff.cpp  utils.cpp  utils.h
src/configs/: donors.txt  electrodes.txt  kmc_config.txt
